syntax = "proto3";
package api;


option go_package = "github.com/Anna-Karenina/sme-engine;apiv1";


service Apps {
  rpc CreateApp (CreateAppPayload) returns (App);
  rpc ReadApp (AppIdPayload) returns (App);
  rpc UpdateApp (CreateAppPayload) returns (App);
  rpc RemoveApp (AppIdPayload) returns (AppIdPayload);
  rpc ReadAllApps (EmptyParams) returns (AppList);

  rpc RunApp(RunAppRequest) returns (AppRunTime);
  rpc StopApp(StopAppRequest) returns (AppRunTime);
  rpc SyncAppScripts(AppIdPayload) returns(App);
  rpc UpdateDefaultRunScript(UpdateDefaultRunScriptParams) returns (App);
}


service Environment{ 
  rpc ProcessStream(DataRequest) returns (stream ProcessInfo);
  rpc GetNodejsInfo(EmptyParams) returns (NodejsVersionsInfo);
  rpc UpdateDefaultNodejsVersion(UpdateDefaultNodejsVersionParams) returns (StatusResponse);
  rpc DownloadNodeJsVersion(RequestVersion) returns (stream DownloadStatusResponse);
}

message EmptyParams {}

message App { 
  int32 id                = 1;
  string path             = 2;
  string name             = 3;
  repeated string scripts = 4;
  string nodeVersion      = 5;
  string default_script   = 6;
  bool isAppValid         = 7;
}


message RequestVersion {
    string version = 1;
  }

message UpdateDefaultNodejsVersionParams {
    int32 id           = 1;
    string version   = 2;
    bool updateNvmrc = 3;
  }

message AppList{
  repeated App apps = 1;
}

message CreateAppPayload { 
  string path = 1;
  string name = 2;
}

message AppIdPayload { 
  int32 id = 1;
}

message Remove {
  string path = 1; 
}

message StatusResponse {
  string status = 1;
}

message StopAppRequest  {
  int32 id = 1;
}

message RunAppRequest {
  int32 id           = 1;
  string command     = 2;
  string nodeVersion = 3;
}

message AppRunTime {
  int32 id                = 1;
	string status           = 2;
	int32 pid               = 3;
	int32 cpu               = 4;
	int32 mem               = 5;
	int32 sid               = 6;
	repeated int32 ports    = 7;
	string branch           = 8;
}


message DataRequest { 
  string id = 1;
}

message TotalEnviromentUsage { 
  string cpu     = 1;
	string mem     = 2;
  int32 quantity = 3;
}

message ProcessInfo {
  TotalEnviromentUsage environment = 1;
  repeated AppRunTime apps         = 2;
}

message NodejsVersionsInfo { 
  repeated string installed = 1;
  repeated string remoteLts = 2;
}
message UpdateDefaultRunScriptParams {
    string script = 1;
    int32 id      = 2;
}

message DownloadStatusResponse {
  string status = 1;
}
